Remove irc markup from real name in nicklist.

Also clean up the code a bit.
BUG:247882